# themix-gui

./: gui.sh
oomox_gui/: export_common.py
plugins/theme_arc/: oomox_plugin.py
plugins/theme_arc/arc-theme/: change_color.sh
plugins/theme_arc/arc-theme/common/: meson.build
